# gdoc-editor

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
gdoc/: __init__.py  auth.py  cli.py  editor.py  markdown.py  reader.py
